<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_phone"
        android:drawableLeft="@mipmap/phone"
        android:hint="@string/phone"
        style="@style/login_et_style"
        />

    <EditText
        android:id="@+id/login_pwd"
        android:hint="@string/pwd"
        android:layout_marginTop="5dp"
        android:drawableLeft="@mipmap/dialog_pwd"
        style="@style/login_et_style"/>

    <Button
        android:id="@+id/dialog_login"
        android:text="@string/login"
        style="@style/title2_w_font_b"
        android:layout_marginTop="25dp"
        android:background="@drawable/blue_btn_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:paddingTop="@dimen/common_pad_b"
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_fogt_tv"
            android:text="@string/forget_pwd"
            style="@style/nomal_grag_font"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>