<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/download_btm_fl"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:animationCache="true"
    android:layout_height="50dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="@color/white_pure"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/common_pad_b"
            android:paddingRight="@dimen/common_pad_b"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                style="@style/nomal_b_font"
                android:text="@string/free_disk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/download_free_disk_tv"
                android:layout_width="wrap_content"
                style="@style/nomal_b_font"
                android:text="9.3G"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:paddingRight="@dimen/common_pad_b_h"
            android:paddingLeft="@dimen/common_pad_b_h"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/down_disk_progress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:progressDrawable="@drawable/disk_use_pro_bg"
                android:progress="50"
                android:layout_height="5dp"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/title_blue"
                    android:layout_height="15dp"/>

                <TextView
                    style="@style/snomal_b_font"
                    android:text="@string/used_desk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/down_disk_used_tv"
                    style="@style/snomal_b_font"
                    android:text="3.8G"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/download_del_ll"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="@color/divid_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/download_del_sel_tv"
            style="@style/subTitle_b_font"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/white_pure"
            android:layout_margin="1px"
            android:text="@string/select_all"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/download_del_tv"
            android:layout_weight="1"
            style="@style/subTitle_blue_font"
            android:layout_margin="1px"
            android:gravity="center"
            android:text="@string/delete"
            android:background="@color/white_pure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </LinearLayout>
</FrameLayout>